2011-07-18  Adam Barth  <abarth@webkit.org>

        simplejson has trouble on chromium-linux
        https://bugs.webkit.org/show_bug.cgi?id=64757

        Reviewed by Eric Seidel.

        Use the native JSON, if available.

        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator.py:

2011-07-18  Ojan Vafai  <ojan@chromium.org>

        update the flakiness dashboard to understand the new platforms/formats in test_expectations
        https://bugs.webkit.org/show_bug.cgi?id=64743

        Reviewed by Adam Barth.

        The test expectations format changed a long time ago and the flakiness dashboard
        was never updated to match.

        * TestResultServer/static-dashboards/dashboard_base.js:
        * TestResultServer/static-dashboards/flakiness_dashboard.html:
        * TestResultServer/static-dashboards/flakiness_dashboard_tests.js:
        * TestResultServer/static-dashboards/timeline_explorer.html:

2011-07-18  Eric Seidel  <eric@webkit.org>

        webkit-patch apply-attachment does not work when not called from the root of the checkout
        https://bugs.webkit.org/show_bug.cgi?id=64751

        Reviewed by Adam Barth.

        Last week I removed a os.chdir in EnsureWorkingDirectoryClean, which
        is a step that we run for most commands (as one of the earliest steps).
        EnsureWorkingDirectoryClean was incorrectly calling os.chdir to change
        the CWD to the checkout root.  This magically made a bunch of otherwise
        wrong code work.

        When I realized that apply-attachment no longer worked as expected today,
        I went and fixed the bug, then realizing that we were not testing
        what the cwd was when running various commands.  I fixed our MockExecutive
        to always log what the cwd is and fixed a whole bunch of places
        where we needed to be setting the cwd.

        Hopefully this will solve our cwd problems once and for-all, and webkit-patch